Fix header course title alignment

--- a/lms/static/sass/_overrides.scss
+++ b/lms/static/sass/_overrides.scss
@@ -16,7 +16,7 @@ html {
     }
 
     .course-header {
-      margin-top: 0 !important;
+      margin-top: 10px;
       text-shadow: none;
       color: white;
     }
